logging/fluent-bit.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: logging
spec:
  selector:
    matchLabels:
      name: fluent-bit
  template:
    metadata:
      labels:
        name: fluent-bit
      # annotations:
      #   # do not collect resouce have annotation fluentbit.io/exclude: "true"
      #   fluentbit.io/exclude: "true"
    spec:
      containers:
        - name: fluent-bit
          image: cr.fluentbit.io/fluent/fluent-bit:3.0.3
          args:
            - -c
            - /fluent-bit/etc/conf/fluent-bit.conf
          volumeMounts:
            - mountPath: /var/log
              name: varlog
            - mountPath: /var/lib/docker/containers
              name: varlibdockercontainers
              readOnly: true
            - name: fluent-bit-config
              mountPath: /fluent-bit/etc/conf
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
            type: ""
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
            type: ""
        - name: fluent-bit-config
          configMap:
            name: fluent-bit-config
